--- a/partials/styles.scss
+++ b/partials/styles.scss
@@ -1,8 +1,10 @@
 //Import Partials
 @import 'setup';
-@import 'variablesMixins';
 @import 'global';
-@import 'main';
 @import 'header';
-
+@import 'main';
+@import 'footer';
+@import 'blog';
+@import 'contact';
+@import 'mediaqueries';
 
