--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1105,3 +1105,22 @@ aside {
     margin-left: 2px;
   }
 }
+
+@media (max-width: 360px) {
+  .blog h3,
+  .blog h1 {
+    display: none;
+  }
+  li a {
+    padding: 5px;
+  }
+  .commentsText p {
+    margin-right: 2px;
+  }
+  .comments img {
+    margin-left: 10px;
+  }
+  .contact h1 {
+    display: none;
+  }
+}
