--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -170,19 +170,13 @@ box-shadow: -10px 10px rgb(248, 251, 5);
 input {
     text-transform: uppercase;
     color: rgb(6, 86, 53);
-    // padding: 10px 0px 20px 65px;
     font-size: 1.5rem;
     font-family: 'lato', sans-serif;
     border: none;
     margin-top: 30px;
     margin-left: 90px;
-    border-bottom: 2px solid darkgreen;
-    // height: 10px;
+    border-bottom: 2px solid rgb(6, 86, 53);
 }
-
-// label {
-//     margin-left: 100px;
-// }
 
 input[type=text],
 input[type=email] {
@@ -200,4 +194,5 @@ font-size: 2rem;
 font-family: 'lato' sans-serif;
 background: none;
 }
+
 
