--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -44,32 +44,20 @@ aside {
 .contactInfo { 
     background-color: rgb(224, 253, 223);
     flex: 1 0px; 
-    // padding: 10px 20px 20px 20px;
-    // margin-top: 80px;
     margin-right: 45px;
   }
   
 .social a {
     padding: 10px;
     margin-top: 30px;
-    color: darkgreen;
-    // margin-right: 20px;
+    color: rgb(6, 86, 53);
 }
 
   .fontsAwesome ul {
     display: flex;
     align-items: row;
     align-items: flex-end;
-    // padding: 2px;
-
 }
-
-// .fontAwesome li {
-//     // padding: 120px;
-//     letter-spacing: 2em;
-// }
-
-
 
 .contactInfo a, 
 .contactInfo p {
@@ -78,7 +66,6 @@ aside {
     justify-content: center;
     font-family: 'lato', sans-serif;
     font-size: 1.5rem;
-    // margin: 2px 2px 2px 2px;
 }
 
 
@@ -88,20 +75,17 @@ aside {
     background-color: rgb(224, 253, 223);
     display: flex;
     justify-content: row;
-    
-    // width: 100%;
     height: 400px;
-    // padding: 0px 40px 40px 40px;
+
 }
 
 .form {
-    border: 1px solid black;
+    border: 1px solid rgb(21, 21, 20);
     text-align: center;
-    background-color: whitesmoke;
-    box-shadow: 10px 10px yellow;
+    background-color: rgb(245, 245, 245);
+    box-shadow: 10px 10px rgb(248, 251, 5);
     margin-left: 90px;
     margin-top: -150px;
-    // padding: 40px 40px 40px 40px;
     position: relative;
     height: 450px;
     width: 750px;
