--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -27,12 +27,14 @@ body {
     font-weight: 400;
     line-height: 32px;
     letter-spacing: 2px;
-    // overflow-x: hidden;
 }
 
 .wrapper {
     max-width: 1280px;
-    // min-width: 320px;
     width: 100%;
     margin: 0 auto;
+}
+
+span {
+    border-bottom: 5px solid rgb(248, 251, 5);
 }
